--- a/test/simple_ajax.html
+++ b/test/simple_ajax.html
@@ -26,13 +26,7 @@
 		<script src="../src/hjax.js"></script>
 	</head>
 	<body>
-		<ajax
-			GET send
-			name="test-ajax"
-			url="test.json"
-			for="draw_1"
-			type="application/json"
-		></ajax>
+		<ajax GET name="test-ajax" url="test.json" for="draw_1" type="application/json" send></ajax>
 		
 		<div>
 			<draw name="draw_1">
