--- a/test/simple_ajax.html
+++ b/test/simple_ajax.html
@@ -4,6 +4,8 @@
     <style>
       html, body {
         margin: 0;
+		width: 100%;
+		height: 100%;
       }
 
       .item {
@@ -26,16 +28,90 @@
     <script src="../src/hjax.js"></script>
   </head>
   <body>
-    <ajax GET name="test-ajax" url="json/test.json" for="draw_1" type="application/json" send></ajax>
-
-    <div>
-      <draw name="draw_1">
-        <div class="item">
-          <label><value name="title"/></label>
-          <p><value name="content"/></p>
-        </div>
-    </draw>
-  </div>
-
+    <!-- An example with everything we need to use this wonder. -->
+  
+    <ajax GET send name="test-1" url="./json/test.json" for="draw_1" type="application/json"></ajax>
+	<ajax GET name="test-2" url="./json/test2.json" type="application/json"></ajax>
+	
+	<br>
+    <div style="margin-left: 20px;width:100%;display: block;">
+      <input id="title"></input>
+      <input id="content"></input>
+      <button id="add">Add</button>
+    </div>
+	<br>
+	
+    <div style="width:100%;height: 100px;display: block;">
+      <div>
+        <draw name="draw_0">
+          <div class="item">
+            <label><value name="title"/></label>
+            <p><value name="content"/></p>
+          </div>
+        </draw>
+      </div>
+    </div>
+	
+    <div style="width:100%;display: block;">
+      <div>
+        <draw name="draw_1">
+          <div class="item">
+            <label><value name="title"/></label>
+            <p><value name="content"/></p>
+          </div>
+        </draw>
+      </div>
+    </div>
+	
+    <div style="float:left;width:100%;display: block;">
+		<div>
+		  <draw name="draw_2">
+			<div class="item">
+			  <label><value name="title"/></label>
+			  <p><value name="content"/></p>
+			</div>
+		  </draw>
+		</div>
+    </div>
+	
+    <div style="float:left;width:100%;display: block;">
+		<div>
+		  <draw name="draw_3">
+			<div class="item">
+			  <label><value name="title"/></label>
+			  <p><value name="content"/></p>
+			</div>
+		  </draw>
+		</div>
+    </div>
+	
+    <script>
+	  hjax.onready = function() {
+	    var ajx = hjax.get_ajax("test-2");
+		var dwr = hjax.get_drawer("draw_2");
+		
+		ajx.onload = function(request) {
+		  dwr.fill(request.data);
+		};
+		
+		ajx.send();
+		
+	    var dwr2 = hjax.get_drawer("draw_3");
+        dwr2.draw_array([
+          {title: "Title 1", content: "Content 1"},
+          {title: "Title 2", content: "Content 2"},
+          {title: "Title 3", content: "Content 3"}
+        ]);
+	  };
+	  
+	  document.getElementById("add").onclick = function() {
+	    var dwr = hjax.get_drawer("draw_0");
+		dwr.draw({
+			title: document.getElementById("title").value,
+			content: document.getElementById("content").value
+		});
+	  };
+    </script>
+	
   </body>
 </html>
